--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="./dist/css/styles.min.css">
     </head>
     
-    <body>header
+    <body>
+        <header>header</header>
         <script src="./dist/js/scripts.min.js"></script>
     </body>
 
