--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 <partial src="header.html"></partial>
+<main>
+    <partial src="intro.html"></partial>
+    <partial src="reviews.html"></partial>
+</main>
 <script src="./dist/js/scripts.min.js"></script>
 </body>
 </html>
