--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,3 +1,17 @@
-<header>
-    header
+<header class="page-header">
+    <div class="container">
+        <nav class="page-header__nav navigation">
+            <a class="logo" href="#">
+                <img class="logo__image" src="./dist/img/logo1.png" alt="" width="43" height="41">
+                ForkIO
+            </a>
+            <ul class="navigation__list">
+                <li class="navigation__item">Overview</li>
+                <li class="navigation__item">About Fork</li>
+                <li class="navigation__item">Buying Options</li>
+                <li class="navigation__item">Support</li>
+            </ul>
+            <button class="navigation__btn">Buy Now</button>
+        </nav>
+    </div>
 </header>
