--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
             </a>
 
                     <ul class="navigation__list">
-                        <li class="navigation__item">Overview</li>
-                        <li class="navigation__item">About Fork</li>
-                        <li class="navigation__item">Buying Options</li>
-                        <li class="navigation__item">Support</li>
+                        <li class="navigation__item"><a class="navigation__link" href="#">Overview</a>
+
+                        </li>
+                        <li class="navigation__item"><a class="navigation__link" href="#">About Fork</a>
+
+                        </li>
+                        <li class="navigation__item"><a class="navigation__link" href="#">Buying Options</a>
+
+                        </li>
+                        <li class="navigation__item"><a class="navigation__link" href="#">Support</a>
+
+                        </li>
                     </ul>
                     <button class="navigation__btn">Buy Now</button>
                 </nav>
