--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="container">
                 <nav class="page-header__nav navigation"> <a class="logo" href="#">
                 <img class="logo__image" src="./dist/img/logo1.png" alt="" width="43" height="41">
+                <img class="logo__image-color" src="./dist/img/logo-purp.png" alt="" width="43" height="41">
                 ForkIO
             </a>
 
