--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,6 +3,7 @@
         <nav class="page-header__nav navigation">
             <a class="logo" href="#">
                 <img class="logo__image" src="./dist/img/logo1.png" alt="" width="43" height="41">
+                <img class="logo__image-color" src="./dist/img/logo-purp.png" alt="" width="43" height="41">
                 ForkIO
             </a>
             <ul class="navigation__list">
