--- a/index.html
+++ b/index.html
@@ -65,6 +65,185 @@
           </div>
         </div>
       </section>
+      <section class="revolutionary-editor">
+        <div class="container">
+          <h2 class="revolutionary-editor__title">Revolutionary editor</h2>
+          <p class="revolutionary-editor__info">
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+            eget ut augue.
+          </p>
+          <ul class="revolutionary-editor__btn-list">
+            <li class="revolutionary-editor__btn-item">
+              <a href="" class="revolutionary-editor__item-link">
+                <span class="revolutionary-editor__item-name"
+                  ><img
+                    src="dist/img/eye.svg"
+                    alt=""
+                    width="15"
+                    height="12"
+                    class="revolutionary-editor__item-img"
+                  />Watch</span
+                >
+                <span class="revolutionary-editor__item-rank">1,397</span>
+              </a>
+            </li>
+            <li class="revolutionary-editor__btn-item">
+              <a href="" class="revolutionary-editor__item-link">
+                <span class="revolutionary-editor__item-name"
+                  ><img
+                    src="dist/img/star.svg"
+                    alt=""
+                    width="15"
+                    height="12"
+                    class="revolutionary-editor__item-img"
+                  />Star</span
+                >
+                <span class="revolutionary-editor__item-rank">21,038</span>
+              </a>
+            </li>
+            <li class="revolutionary-editor__btn-item">
+              <a href="" class="revolutionary-editor__item-link">
+                <span class="revolutionary-editor__item-name"
+                  ><img
+                    src="dist/img/fork.svg"
+                    alt=""
+                    width="15"
+                    height="12"
+                    class="revolutionary-editor__item-img"
+                  />Fork</span
+                >
+                <span class="revolutionary-editor__item-rank">4,391</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="features">
+        <div class="container features_container">
+          <h2 class="features__title">Here is what you get</h2>
+          <ul class="features__web-list">
+            <li class="features__web-item">
+              <div class="features__web-boximg-container">
+                <img
+                  src="/dist/img/features/icon1.png"
+                  alt=""
+                  width="111"
+                  height="64"
+                  class="features__web-img"
+                />
+              </div>
+              <div class="features__web-box">
+                <h3 class="features__web-item-title">
+                  Creatred to Make The Web Better
+                </h3>
+                <p class="features__web-item-info">
+                  Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
+                  dui laoreet vulputate dignissim. Sed id metus id quam auctor
+                  molestie eget ut augue.
+                </p>
+              </div>
+            </li>
+            <li class="features__web-item">
+              <div class="features__web-boximg-container">
+                <img
+                  src="/dist/img/features/icon2.png"
+                  alt=""
+                  width="90"
+                  height="80"
+                  class="features__web-img"
+                />
+              </div>
+              <div class="features__web-box">
+                <h3 class="features__web-item-title">
+                  Creatred to Make The Web Better
+                </h3>
+                <p class="features__web-item-info">
+                  Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
+                  dui laoreet vulputate dignissim. Sed id metus id quam auctor
+                  molestie eget ut augue.
+                </p>
+              </div>
+            </li>
+            <li class="features__web-item">
+              <div class="features__web-boximg-container">
+                <img
+                  src="/dist/img/features/icon3.png"
+                  alt=""
+                  width="60"
+                  height="84"
+                  class="features__web-img"
+                />
+              </div>
+
+              <div class="features__web-box">
+                <h3 class="features__web-item-title">
+                  Creatred to Make The Web Better
+                </h3>
+                <p class="features__web-item-info">
+                  Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
+                  dui laoreet vulputate dignissim. Sed id metus id quam auctor
+                  molestie eget ut augue.
+                </p>
+              </div>
+            </li>
+            <li class="features__web-item">
+              <div class="features__web-boximg-container">
+                <img
+                  src="/dist/img/features/icon4.png"
+                  alt=""
+                  width="71"
+                  height="71"
+                  class="features__web-img"
+                />
+              </div>
+
+              <div class="features__web-box">
+                <h3 class="features__web-item-title">
+                  Creatred to Make The Web Better
+                </h3>
+                <p class="features__web-item-info">
+                  Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
+                  dui laoreet vulputate dignissim. Sed id metus id quam auctor
+                  molestie eget ut augue.
+                </p>
+              </div>
+            </li>
+          </ul>
+          <img
+            src="./dist/img/features/editor1.png"
+            alt=""
+            class="features__img"
+            width="700"
+            height="450"
+          />
+        </div>
+      </section>
+      <section class="testimoniats">
+        <h2 class="testimoniats__title"></h2>
+        <ul class="testimoniats__list">
+          <li class="testimoniats__item">
+            <img src="" alt="" class="testimoniats__item--img" />
+            <p class="testimoniats__item-info">
+              Sed vestibulum scelerisque urna, eu finibus leo facilisis sit
+              amet. Proin id dignissim magna. Sed varius urna et pulvinar
+              venenatis.
+            </p>
+          </li>
+        </ul>
+        <p class="testimoniats__info">
+          Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris,
+          facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu
+          libero tincidunt consequat nec elementum orci. Cum sociis natoque
+          penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        </p>
+      </section>
+      <section class="pricing">
+        <h2 class="pricing__title"></h2>
+        <ul class="pricing__price-list">
+          <li class="pricing__price"></li>
+        </ul>
+      </section>
       <section class="reviews">
         <div class="container">
           <h2 class="reviews__title">People Are Talking About Fork</h2>
