--- a/index.html
+++ b/index.html
@@ -238,12 +238,7 @@
           penatibus et magnis dis parturient montes, nascetur ridiculus mus.
         </p>
       </section>
-      <section class="pricing">
-        <h2 class="pricing__title"></h2>
-        <ul class="pricing__price-list">
-          <li class="pricing__price"></li>
-        </ul>
-      </section>
+
       <section class="reviews">
         <div class="container">
           <h2 class="reviews__title">People Are Talking About Fork</h2>
@@ -338,6 +333,45 @@
             penatibus et magnis dis parturient montes, nascetur ridiculus mus.
           </p>
         </div>
+      </section>
+      <section class="pricing">
+        <h2 class="pricing__title">Fork Subscription Pricing</h2>
+        <ul class="pricing__price-list">
+          <li class="pricing__price-item">
+            <h3 class="pricing__price-item-title">Students</h3>
+            <p class="pricing__price-item-price">$29</p>
+            <p class="pricing__price-item-mounth">per month</p>
+            <p class="pricing__price-item-license">Personal License</p>
+            <a href="#" class="pricing__price-item-link">purchase</a>
+          </li>
+          <li class="pricing__price-item">
+            <h3 class="pricing__price-item-title">professional</h3>
+            <p class="pricing__price-item-price">$59</p>
+            <p class="pricing__price-item-mounth">per month</p>
+            <p class="pricing__price-item-license">
+              Professional License Email Support
+            </p>
+            <a href="#" class="pricing__price-item-link">purchase</a>
+          </li>
+          <li class="pricing__price-item">
+            <h3 class="pricing__price-item-title">agency</h3>
+            <p class="pricing__price-item-price">$99</p>
+            <p class="pricing__price-item-mounth">per month</p>
+            <p class="pricing__price-item-license">
+              1-12 Team Members Phone Support
+            </p>
+            <a href="#" class="pricing__price-item-link">purchase</a>
+          </li>
+          <li class="pricing__price-item">
+            <h3 class="pricing__price-item-title">enterprise</h3>
+            <p class="pricing__price-item-price">$159</p>
+            <p class="pricing__price-item-mounth">per month</p>
+            <p class="pricing__price-item-license">
+              Unlimited Team Members 24/ 7 Phone Support
+            </p>
+            <a href="#" class="pricing__price-item-link">purchase</a>
+          </li>
+        </ul>
       </section>
     </main>
     <script src="./dist/js/scripts.min.js"></script>
