--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
             <p class="pricing__price-item-mounth">per month</p>
             <p class="pricing__price-item-license">Personal License</p>
             <a href="#" class="pricing__price-item-link">purchase</a>
+            <!-- <button type="button" class="btn">purchase</button> -->
           </li>
           <li class="pricing__price-item">
             <h3 class="pricing__price-item-title">professional</h3>
@@ -353,7 +354,7 @@
             </p>
             <a href="#" class="pricing__price-item-link">purchase</a>
           </li>
-          <li class="pricing__price-item">
+          <li class="pricing__price-item recommended">
             <h3 class="pricing__price-item-title">agency</h3>
             <p class="pricing__price-item-price">$99</p>
             <p class="pricing__price-item-mounth">per month</p>
