--- a/src/html/features.html
+++ b/src/html/features.html
@@ -1,5 +1,5 @@
 <section class="features">
-  <div class="container">
+  <div class="container features__container">
     <h2 class="features__title">Here is what you get</h2>
     <ul class="features__list">
       <li class="features__item">
@@ -75,6 +75,8 @@
       src="./dist/img/features/editor1.png"
       alt=""
       class="features__footer"
+      width="700"
+      height="519"
     />
   </div>
 </section>
