--- a/src/html/features.html
+++ b/src/html/features.html
@@ -3,11 +3,16 @@
     <h2 class="features__title">Here is what you get</h2>
     <ul class="features__list">
       <li class="features__item">
-        <img
-          src="../img/features/icon1.png"
-          alt=""
-          class="features__item-img"
-        />
+        <div class="features__img-box">
+          <img
+            src="./dist/img/features/icon1.png"
+            alt=""
+            class="features__item-img"
+            width="111"
+            height="64"
+          />
+        </div>
+
         <div class="features__item-box">
           <h3 class="features__item-box-title">
             Creatred to Make The Web Better
@@ -20,11 +25,15 @@
         </div>
       </li>
       <li class="features__item">
-        <img
-          src="../img/features/icon1.png"
-          alt=""
-          class="features__item-img"
-        />
+        <div class="features__img-box">
+          <img
+            src="./dist/img/features/icon2.png"
+            alt=""
+            class="features__item-img"
+            width="90"
+            height="80"
+          />
+        </div>
         <div class="features__item-box">
           <h3 class="features__item-box-title">
             Creatred to Make The Web Better
@@ -37,11 +46,16 @@
         </div>
       </li>
       <li class="features__item">
-        <img
-          src="../img/features/icon1.png"
-          alt=""
-          class="features__item-img"
-        />
+        <div class="features__img-box">
+          <img
+            src="./dist/img/features/icon3.png"
+            alt=""
+            class="features__item-img"
+            width="60"
+            height="84"
+          />
+        </div>
+
         <div class="features__item-box">
           <h3 class="features__item-box-title">
             Creatred to Make The Web Better
@@ -54,11 +68,16 @@
         </div>
       </li>
       <li class="features__item">
-        <img
-          src="../img/features/icon1.png"
-          alt=""
-          class="features__item-img"
-        />
+        <div class="features__img-box">
+          <img
+            src="./dist/img/features/icon4.png"
+            alt=""
+            class="features__item-img"
+            width="71"
+            height="71"
+          />
+        </div>
+
         <div class="features__item-box">
           <h3 class="features__item-box-title">
             Creatred to Make The Web Better
