--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                     </ul>
                     <button class="navigation__btn">Buy Now</button>
                     <button class="navigation__btn-menu">
-                        <svg class="navigation__btn-open" width="35" height="30" viewBox="0 0 26 21"
-                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="" width="35" height="30" viewBox="0 0 26 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect y="18" width="26" height="3" rx="1.5" fill="white" />
                             <rect y="9" width="26" height="3" rx="1.5" fill="white" />
                             <rect x="11" width="15" height="3" rx="1.5" fill="white" />
