--- a/index.html
+++ b/index.html
@@ -182,78 +182,263 @@
 
 
 
-      <section class="features">
-    <div class="container features__container">
+      <!-- <section class="features">
+
+  <div class="container features__container">
+
+    <h2 class="features__title">Here is what you get</h2>
+
+    <ul class="features__list">
+
+      <li class="features__item">
+
+        <img
+
+          src="./dist/img/features/icon1.png"
+
+          alt=""
+
+          class="features__item-img"
+
+          width="111"
+
+          height="64"
+
+        />
+
+
+
+        <div class="features__item-box">
+
+          <h3 class="features__item-box-title">
+
+            Creatred to Make The Web Better
+
+          </h3>
+
+          <p class="features__item-box-info">
+
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+
+            eget ut augue.
+
+          </p>
+
+        </div>
+
+      </li>
+
+      <li class="features__item">
+
+        <img
+
+          src="./dist/img/features/icon2.png"
+
+          alt=""
+
+          class="features__item-img"
+
+          width="90"
+
+          height="80"
+
+        />
+
+        <div class="features__item-box">
+
+          <h3 class="features__item-box-title">
+
+            Creatred to Make The Web Better
+
+          </h3>
+
+          <p class="features__item-box-info">
+
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+
+            eget ut augue.
+
+          </p>
+
+        </div>
+
+      </li>
+
+      <li class="features__item">
+
+        <div class="features__img-box">
+
+          <img
+
+            src="./dist/img/features/icon3.png"
+
+            alt=""
+
+            class="features__item-img"
+
+            width="60"
+
+            height="84"
+
+          />
+
+        </div>
+
+
+
+        <div class="features__item-box">
+
+          <h3 class="features__item-box-title">
+
+            Creatred to Make The Web Better
+
+          </h3>
+
+          <p class="features__item-box-info">
+
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+
+            eget ut augue.
+
+          </p>
+
+        </div>
+
+      </li>
+
+      <li class="features__item">
+
+        <div class="features__img-box">
+
+          <img
+
+            src="./dist/img/features/icon4.png"
+
+            alt=""
+
+            class="features__item-img"
+
+            width="71"
+
+            height="71"
+
+          />
+
+        </div>
+
+
+
+        <div class="features__item-box">
+
+          <h3 class="features__item-box-title">
+
+            Creatred to Make The Web Better
+
+          </h3>
+
+          <p class="features__item-box-info">
+
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+
+            eget ut augue.
+
+          </p>
+
+        </div>
+
+      </li>
+
+    </ul>
+
+    <img
+
+      src="./dist/img/features/editor1.png"
+
+      alt=""
+
+      class="features__footer"
+
+      width="700"
+
+      height="519"
+
+    />
+
+  </div>
+
+</section> -->
+<section class="features">
+    <div class="container container_features">
          <h2 class="features__title">Here is what you get</h2>
 
-        <ul class="features__list">
-            <li class="features__item">
-                <div class="features__img-box">
-                    <img src="./dist/img/features/icon1.png" alt="" class="features__item-img"
-                    width="111" height="64" />
-                </div>
-                <div class="features__item-box">
-                     <h3 class="features__item-box-title">
+        <ul class="features__web-list">
+            <li class="features__web-item">
+                <img src="./dist/img/features/icon1.png" alt="" width="111" height="64"
+                class="features__web-img" />
+                <div class="features__web-box">
+                     <h3 class="features__web-item-title">
 
             Creatred to Make The Web Better
 
           </h3>
 
-                    <p class="features__item-box-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
+                    <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
                         vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
                 </div>
             </li>
-            <li class="features__item">
-                <div class="features__img-box">
-                    <img src="./dist/img/features/icon2.png" alt="" class="features__item-img"
-                    width="90" height="80" />
-                </div>
-                <div class="features__item-box">
-                     <h3 class="features__item-box-title">
+            <li class="features__web-item">
+                <img src="./dist/img/features/icon2.png" alt="" width="90" height="80"
+                class="features__web-img" />
+                <div class="features__web-box">
+                     <h3 class="features__web-item-title">
 
             Creatred to Make The Web Better
 
           </h3>
 
-                    <p class="features__item-box-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
+                    <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
                         vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
                 </div>
             </li>
-            <li class="features__item">
-                <div class="features__img-box">
-                    <img src="./dist/img/features/icon3.png" alt="" class="features__item-img"
-                    width="60" height="84" />
-                </div>
-                <div class="features__item-box">
-                     <h3 class="features__item-box-title">
+            <li class="features__web-item">
+                <img src="./dist/img/features/icon3.png" alt="" width="60" height="84"
+                class="features__web-img" />
+                <div class="features__web-box">
+                     <h3 class="features__web-item-title">
 
             Creatred to Make The Web Better
 
           </h3>
 
-                    <p class="features__item-box-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
+                    <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
                         vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
                 </div>
             </li>
-            <li class="features__item">
-                <div class="features__img-box">
-                    <img src="./dist/img/features/icon4.png" alt="" class="features__item-img"
-                    width="71" height="71" />
-                </div>
-                <div class="features__item-box">
-                     <h3 class="features__item-box-title">
+            <li class="features__web-item">
+                <img src="./dist/img/features/icon4.png" alt="" width="71" height="71"
+                class="features__web-img" />
+                <div class="features__web-box">
+                     <h3 class="features__web-item-title">
 
             Creatred to Make The Web Better
 
           </h3>
 
-                    <p class="features__item-box-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
+                    <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
                         vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
                 </div>
             </li>
         </ul>
-        <img src="./dist/img/features/editor1.png" alt="" class="features__footer"
-        width="700" height="519" />
+        <img src="./dist/img/features/editor1.png" alt="" class="features__img"
+        />
     </div>
 </section>
 
@@ -321,22 +506,22 @@
                 <p class="pricing__item-licence">Personal License</p> <a href="#" class="pricing__item-link">purchase</a>
                         </li>
                         <li class="pricing__item">
-                             <h3 class="pricing__item-title">Students</h3>
-                            <p class="pricing__item-price">$29</p>
+                             <h3 class="pricing__item-title">professional</h3>
+                            <p class="pricing__item-price">$59</p>
                             <p class="pricing__item-month">per month</p>
-                            <p class="pricing__item-licence">Personal License</p> <a href="#" class="pricing__item-link">purchase</a>
+                            <p class="pricing__item-licence">Professional License Email Support</p> <a href="#" class="pricing__item-link">purchase</a>
+                        </li>
+                        <li class="pricing__item item-correct">
+                             <h3 class="pricing__item-title correct-title">agency</h3>
+                            <p class="pricing__item-price correct-price">$99</p>
+                            <p class="pricing__item-month">per month</p>
+                            <p class="pricing__item-licence correct-licence">1-12 Team Members Phone Support</p> <a href="#" class="pricing__item-link correct-link">purchase</a>
                         </li>
                         <li class="pricing__item">
-                             <h3 class="pricing__item-title">Students</h3>
-                            <p class="pricing__item-price">$29</p>
+                             <h3 class="pricing__item-title">enterprise</h3>
+                            <p class="pricing__item-price">$159</p>
                             <p class="pricing__item-month">per month</p>
-                            <p class="pricing__item-licence">Personal License</p> <a href="#" class="pricing__item-link">purchase</a>
-                        </li>
-                        <li class="pricing__item">
-                             <h3 class="pricing__item-title">Students</h3>
-                            <p class="pricing__item-price">$29</p>
-                            <p class="pricing__item-month">per month</p>
-                            <p class="pricing__item-licence">Personal License</p> <a href="#" class="pricing__item-link">purchase</a>
+                            <p class="pricing__item-licence">Unlimited Team Members 24/ 7 Phone Support</p> <a href="#" class="pricing__item-link">purchase</a>
                         </li>
                         </ul>
                 </div>
