--- a/src/html/features.html
+++ b/src/html/features.html
@@ -1,17 +1,15 @@
-<section class="features">
+<!-- <section class="features">
   <div class="container features__container">
     <h2 class="features__title">Here is what you get</h2>
     <ul class="features__list">
       <li class="features__item">
-        <div class="features__img-box">
-          <img
-            src="./dist/img/features/icon1.png"
-            alt=""
-            class="features__item-img"
-            width="111"
-            height="64"
-          />
-        </div>
+        <img
+          src="./dist/img/features/icon1.png"
+          alt=""
+          class="features__item-img"
+          width="111"
+          height="64"
+        />
 
         <div class="features__item-box">
           <h3 class="features__item-box-title">
@@ -25,15 +23,13 @@
         </div>
       </li>
       <li class="features__item">
-        <div class="features__img-box">
-          <img
-            src="./dist/img/features/icon2.png"
-            alt=""
-            class="features__item-img"
-            width="90"
-            height="80"
-          />
-        </div>
+        <img
+          src="./dist/img/features/icon2.png"
+          alt=""
+          class="features__item-img"
+          width="90"
+          height="80"
+        />
         <div class="features__item-box">
           <h3 class="features__item-box-title">
             Creatred to Make The Web Better
@@ -97,5 +93,89 @@
       width="700"
       height="519"
     />
+  </div>
+</section> -->
+<section class="features">
+  <div class="container container_features">
+    <h2 class="features__title">Here is what you get</h2>
+    <ul class="features__web-list">
+      <li class="features__web-item">
+        <img
+          src="./dist/img/features/icon1.png"
+          alt=""
+          width="111"
+          height="64"
+          class="features__web-img"
+        />
+        <div class="features__web-box">
+          <h3 class="features__web-item-title">
+            Creatred to Make The Web Better
+          </h3>
+          <p class="features__web-item-info">
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+            eget ut augue.
+          </p>
+        </div>
+      </li>
+      <li class="features__web-item">
+        <img
+          src="./dist/img/features/icon2.png"
+          alt=""
+          width="90"
+          height="80"
+          class="features__web-img"
+        />
+        <div class="features__web-box">
+          <h3 class="features__web-item-title">
+            Creatred to Make The Web Better
+          </h3>
+          <p class="features__web-item-info">
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+            eget ut augue.
+          </p>
+        </div>
+      </li>
+      <li class="features__web-item">
+        <img
+          src="./dist/img/features/icon3.png"
+          alt=""
+          width="60"
+          height="84"
+          class="features__web-img"
+        />
+        <div class="features__web-box">
+          <h3 class="features__web-item-title">
+            Creatred to Make The Web Better
+          </h3>
+          <p class="features__web-item-info">
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+            eget ut augue.
+          </p>
+        </div>
+      </li>
+      <li class="features__web-item">
+        <img
+          src="./dist/img/features/icon4.png"
+          alt=""
+          width="71"
+          height="71"
+          class="features__web-img"
+        />
+        <div class="features__web-box">
+          <h3 class="features__web-item-title">
+            Creatred to Make The Web Better
+          </h3>
+          <p class="features__web-item-info">
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+            eget ut augue.
+          </p>
+        </div>
+      </li>
+    </ul>
+    <img src="./dist/img/features/editor1.png" alt="" class="features__img" />
   </div>
 </section>
