--- a/src/html/features.html
+++ b/src/html/features.html
@@ -3,7 +3,7 @@
     <h2 class="features__title">Here is what you get</h2>
     <ul class="features__web-list">
       <li class="features__web-item">
-        <div class="test">
+        <div class="features_web-box-img">
           <img
             src="./dist/img/features/icon1.png"
             alt=""
@@ -24,7 +24,7 @@
         </div>
       </li>
       <li class="features__web-item">
-        <div class="test">
+        <div class="features_web-box-img">
           <img
             src="./dist/img/features/icon2.png"
             alt=""
@@ -45,7 +45,7 @@
         </div>
       </li>
       <li class="features__web-item">
-        <div class="test">
+        <div class="features_web-box-img">
           <img
             src="./dist/img/features/icon3.png"
             alt=""
@@ -66,7 +66,7 @@
         </div>
       </li>
       <li class="features__web-item">
-        <div class="test">
+        <div class="features_web-box-img">
           <img
             src="./dist/img/features/icon4.png"
             alt=""
