--- a/src/html/features.html
+++ b/src/html/features.html
@@ -1,5 +1,5 @@
 <section class="features">
-  <div class="container container_features">
+  <div class="container features__container">
     <h2 class="features__title">Here is what you get</h2>
     <ul class="features__web-list">
       <li class="features__web-item">
@@ -10,7 +10,6 @@
           height="64"
           class="features__web-img"
         />
-
         <div class="features__web-box">
           <h3 class="features__web-item-title">
             Creatred to Make The Web Better
@@ -30,7 +29,6 @@
           height="80"
           class="features__web-img"
         />
-
         <div class="features__web-box">
           <h3 class="features__web-item-title">
             Creatred to Make The Web Better
@@ -50,7 +48,6 @@
           height="84"
           class="features__web-img"
         />
-
         <div class="features__web-box">
           <h3 class="features__web-item-title">
             Creatred to Make The Web Better
@@ -70,7 +67,6 @@
           height="71"
           class="features__web-img"
         />
-
         <div class="features__web-box">
           <h3 class="features__web-item-title">
             Creatred to Make The Web Better
