--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
         <header class="page-header">
             <div class="container">
                 <nav class="page-header__nav navigation"> <a class="logo" href="#">
-
                 <img class="logo__image" src="./dist/img/logo1.png" alt="" width="43" height="41">
-
                 <img class="logo__image-color" src="./dist/img/logo-purp.png" alt="" width="43" height="41">
-
                 <span class="logo__title">ForkIO</span>
-
             </a>
+
                     <ul class="navigation__list">
                         <li class="navigation__item"><a class="navigation__link" href="#">Overview</a>
 
@@ -61,6 +58,7 @@
             <section class="intro">
                 <div class="container">
                      <h1 class="intro__title">Fork App</h1>
+
                     <p class="intro__text">A real gamechanger in the world of web development</p>
                     <p class="intro__description">v. 2.8 For Mac and Windows</p>
                     <div class="intro__order">
@@ -72,130 +70,72 @@
             <section class="revolutionary-editor">
                 <div class="container">
                      <h2 class="revolutionary-editor__title">Revolutionary editor</h2>
+
                     <p class="revolutionary-editor__info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
                         vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
                     <ul
                     class="revolutionary-editor__list">
                         <li class="revolutionary-editor__item"> <a class="revolutionary-editor__item-link" href="#">
-
           <svg
-
             class="revolutionary-editor__item-link-svg"
-
             width="16"
-
             height="16"
-
           >
-
             <path
-
               fill-rule="evenodd"
-
               d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"
-
             ></path>
-
           </svg>
-
           Watch</a
-
         >
-
         <span class="revolutionary-editor__item-score">1,397</span>
-
       </li>
-
       <li class="revolutionary-editor__item">
-
         <a class="revolutionary-editor__item-link" href="#">
-
           <svg
-
             aria-hidden="true"
-
             height="16"
-
             viewBox="0 0 16 16"
-
             version="1.1"
-
             width="16"
-
             data-view-component="true"
-
             class="revolutionary-editor__item-link-svg"
-
           >
-
             <path
-
               fill-rule="evenodd"
-
               d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25zm0 2.445L6.615 5.5a.75.75 0 01-.564.41l-3.097.45 2.24 2.184a.75.75 0 01.216.664l-.528 3.084 2.769-1.456a.75.75 0 01.698 0l2.77 1.456-.53-3.084a.75.75 0 01.216-.664l2.24-2.183-3.096-.45a.75.75 0 01-.564-.41L8 2.694v.001z"
-
             ></path>
-
           </svg>
-
           Star</a
-
         >
-
         <span class="revolutionary-editor__item-score">21,038</span>
-
       </li>
-
       <li class="revolutionary-editor__item">
-
         <a class="revolutionary-editor__item-link" href="#">
-
           <svg
-
             aria-hidden="true"
-
             height="16"
-
             viewBox="0 0 16 16"
-
             version="1.1"
-
             width="16"
-
             data-view-component="true"
-
             class="revolutionary-editor__item-link-svg"
-
           >
-
             <path
-
               fill-rule="evenodd"
-
               d="M5 3.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm0 2.122a2.25 2.25 0 10-1.5 0v.878A2.25 2.25 0 005.75 8.5h1.5v2.128a2.251 2.251 0 101.5 0V8.5h1.5a2.25 2.25 0 002.25-2.25v-.878a2.25 2.25 0 10-1.5 0v.878a.75.75 0 01-.75.75h-4.5A.75.75 0 015 6.25v-.878zm3.75 7.378a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm3-8.75a.75.75 0 100-1.5.75.75 0 000 1.5z"
-
             ></path>
-
           </svg>
-
           Fork</a
-
         >
-
         <span class="revolutionary-editor__item-score">4,391</span>
-
       </li>
-
     </ul>
-
   </div>
-
 </section>
 
-
-
       <section class="features">
-    <div class="container container_features">
+    <div class="container features__container">
          <h2 class="features__title">Here is what you get</h2>
 
         <ul class="features__web-list">
@@ -204,9 +144,7 @@
                 class="features__web-img" />
                 <div class="features__web-box">
                      <h3 class="features__web-item-title">
-
             Creatred to Make The Web Better
-
           </h3>
 
                     <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
@@ -218,9 +156,7 @@
                 class="features__web-img" />
                 <div class="features__web-box">
                      <h3 class="features__web-item-title">
-
             Creatred to Make The Web Better
-
           </h3>
 
                     <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
@@ -232,9 +168,7 @@
                 class="features__web-img" />
                 <div class="features__web-box">
                      <h3 class="features__web-item-title">
-
             Creatred to Make The Web Better
-
           </h3>
 
                     <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
@@ -246,9 +180,7 @@
                 class="features__web-img" />
                 <div class="features__web-box">
                      <h3 class="features__web-item-title">
-
             Creatred to Make The Web Better
-
           </h3>
 
                     <p class="features__web-item-info">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet
@@ -260,7 +192,6 @@
         class="features__img" />
     </div>
 </section>
-
       <section class="reviews">
     <div class="container">
          <h2 class="reviews__title">People Are Talking About Fork</h2>
@@ -311,7 +242,6 @@
         </div>
     </div>
 </section>
-
       <section class="pricing">
     <div class="container">
          <h2 class="pricing__title">Fork Subscription Pricing</h2>
@@ -323,24 +253,31 @@
                 <p class="pricing__item-price">$29</p>
                 <p class="pricing__item-month">per month</p>
                 <p class="pricing__item-licence">Personal License</p> <a href="#" class="pricing__item-link">purchase</a>
+
                         </li>
                         <li class="pricing__item">
                              <h3 class="pricing__item-title">professional</h3>
+
                             <p class="pricing__item-price">$59</p>
                             <p class="pricing__item-month">per month</p>
                             <p class="pricing__item-licence">Professional License Email Support</p> <a href="#" class="pricing__item-link">purchase</a>
+
                         </li>
                         <li class="pricing__item item-correct">
                              <h3 class="pricing__item-title correct-title">agency</h3>
+
                             <p class="pricing__item-price correct-price">$99</p>
                             <p class="pricing__item-month">per month</p>
                             <p class="pricing__item-licence correct-licence">1-12 Team Members Phone Support</p> <a href="#" class="pricing__item-link correct-link">purchase</a>
+
                         </li>
                         <li class="pricing__item">
                              <h3 class="pricing__item-title">enterprise</h3>
+
                             <p class="pricing__item-price">$159</p>
                             <p class="pricing__item-month">per month</p>
                             <p class="pricing__item-licence">Unlimited Team Members 24/ 7 Phone Support</p> <a href="#" class="pricing__item-link">purchase</a>
+
                         </li>
                         </ul>
                 </div>
